[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://addons/dialogic/Events/Character/settings_portraits.gd" id="2"]
[ext_resource type="StyleBox" uid="uid://dmsjhgv22dns8" path="res://addons/dialogic/Editor/Common/TitleBgStylebox.tres" id="2_i6l15"]
[ext_resource type="PackedScene" uid="uid://dpwhshre1n4t6" path="res://addons/dialogic/Editor/Events/Fields/ComplexPicker.tscn" id="3"]
[ext_resource type="Script" path="res://addons/dialogic/Editor/Settings/HintLabelStylingScript.gd" id="3_jknrx"]

[sub_resource type="Image" id="Image_t2ykh"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="2"]
image = SubResource("Image_t2ykh")

[node name="Portraits" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="General" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 650.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="General"]
layout_mode = 2
offset_right = 650.0
offset_bottom = 36.0
theme_override_styles/normal = ExtResource("2_i6l15")
text = "Portrait Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="General"]
layout_mode = 2
offset_top = 40.0
offset_right = 650.0
offset_bottom = 71.0

[node name="Label" type="Label" parent="General/HBoxContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 460.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Portraits mode"

[node name="PortraitMode" type="OptionButton" parent="General/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 464.0
offset_right = 650.0
offset_bottom = 31.0
item_count = 2
selected = 0
popup/item_0/text = "Visual Novel Mode"
popup/item_0/id = 0
popup/item_1/text = "RPG Mode"
popup/item_1/id = 1

[node name="Info" type="Label" parent="General"]
layout_mode = 2
offset_top = 75.0
offset_right = 650.0
offset_bottom = 205.0
text = "Visual Novel: Multiple characters can show up in different positions at the same time. They have to be joined and leaved manually.

RPG: Only the character that speaks is visible (always in the same location). Does not have to be joined/left manually. Uses only position_idx 1."
autowrap_mode = 3
script = ExtResource("3_jknrx")

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2
offset_left = 654.0
offset_right = 658.0
offset_bottom = 648.0

[node name="Animations" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 662.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Title" type="Label" parent="Animations"]
layout_mode = 2
offset_right = 490.0
offset_bottom = 36.0
theme_override_styles/normal = ExtResource("2_i6l15")
text = "Animations
"

[node name="HBoxContainer" type="HBoxContainer" parent="Animations"]
layout_mode = 2
offset_top = 40.0
offset_right = 490.0
offset_bottom = 71.0

[node name="Label2" type="Label" parent="Animations/HBoxContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 229.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Custom anims folder"

[node name="CustomAnimationsFolder" type="LineEdit" parent="Animations/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 233.0
offset_right = 462.0
offset_bottom = 31.0
size_flags_horizontal = 3
caret_blink = true

[node name="CustomAnimationsFolderOpener" type="Button" parent="Animations/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 466.0
offset_right = 490.0
offset_bottom = 31.0
icon = SubResource("2")

[node name="HSeparator" type="HSeparator" parent="Animations"]
layout_mode = 2
offset_top = 75.0
offset_right = 490.0
offset_bottom = 79.0

[node name="Title2" type="Label" parent="Animations"]
layout_mode = 2
offset_top = 83.0
offset_right = 490.0
offset_bottom = 119.0
theme_override_styles/normal = ExtResource("2_i6l15")
text = "Default Animations
"

[node name="DefaultIn" type="HBoxContainer" parent="Animations"]
layout_mode = 2
offset_top = 123.0
offset_right = 490.0
offset_bottom = 156.0

[node name="Label3" type="Label" parent="Animations/DefaultIn"]
layout_mode = 2
offset_top = 3.0
offset_right = 107.0
offset_bottom = 29.0
size_flags_horizontal = 3
text = "Default Join"

[node name="JoinDefault" parent="Animations/DefaultIn" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 111.0
offset_right = 311.0
offset_bottom = 33.0

[node name="JoinDefaultLength" type="SpinBox" parent="Animations/DefaultIn"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 315.0
offset_right = 398.0
offset_bottom = 33.0
step = 0.1

[node name="JoinDefaultWait" type="CheckButton" parent="Animations/DefaultIn"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 402.0
offset_right = 490.0
offset_bottom = 33.0
text = "Wait:"

[node name="DefaultOut" type="HBoxContainer" parent="Animations"]
layout_mode = 2
offset_top = 160.0
offset_right = 490.0
offset_bottom = 193.0

[node name="Label4" type="Label" parent="Animations/DefaultOut"]
layout_mode = 2
offset_top = 3.0
offset_right = 107.0
offset_bottom = 29.0
size_flags_horizontal = 3
text = "Default Leave"

[node name="LeaveDefault" parent="Animations/DefaultOut" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 111.0
offset_right = 311.0
offset_bottom = 33.0

[node name="LeaveDefaultLength" type="SpinBox" parent="Animations/DefaultOut"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 315.0
offset_right = 398.0
offset_bottom = 33.0
step = 0.1

[node name="LeaveDefaultWait" type="CheckButton" parent="Animations/DefaultOut"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 402.0
offset_right = 490.0
offset_bottom = 33.0
text = "Wait:"

[connection signal="item_selected" from="General/HBoxContainer/PortraitMode" to="." method="_on_PortraitMode_item_selected"]
[connection signal="pressed" from="Animations/HBoxContainer/CustomAnimationsFolderOpener" to="." method="_on_CustomAnimationsFolderOpener_pressed"]
[connection signal="value_changed" from="Animations/DefaultIn/JoinDefault" to="." method="_on_JoinDefault_value_changed"]
[connection signal="value_changed" from="Animations/DefaultIn/JoinDefaultLength" to="." method="_on_JoinDefaultLength_value_changed"]
[connection signal="toggled" from="Animations/DefaultIn/JoinDefaultWait" to="." method="_on_JoinDefaultWait_toggled"]
[connection signal="value_changed" from="Animations/DefaultOut/LeaveDefault" to="." method="_on_LeaveDefault_value_changed"]
[connection signal="value_changed" from="Animations/DefaultOut/LeaveDefaultLength" to="." method="_on_LeaveDefaultLength_value_changed"]
[connection signal="toggled" from="Animations/DefaultOut/LeaveDefaultWait" to="." method="_on_LeaveDefaultWait_toggled"]
